--- a/FlowersNNV4 (3).ipynb
+++ b/FlowersNNV4 (3).ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -38,16 +38,20 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "#Load the training and testing dataset\n",
     "#TODO Validation dataset\n",
     "(ds_train, ds_test, ds_val), ds_info = tfds.load('oxford_flowers102',\n",
     "                                            split=['train', 'test', 'validation'],\n",
-    "                                            with_info=True, \n",
+    "                                            with_info=True,\n",
     "                                            shuffle_files=True,\n",
     "                                            as_supervised=True)\n",
     "\n",
     "\n",
-    "#This gets the images ready \n",
+    "\n",
+    "\n",
+    "#This gets the images ready\n",
     "shape = (128, 128, 3)\n",
     "big_shape = (200,200,3)\n",
     "small_shape = (64, 64, 3)\n",
@@ -56,11 +60,14 @@
     "    img = tf.image.resize(img,shape[:2])\n",
     "    img = tf.cast(img, tf.float32) / 255\n",
     "\n",
+    "\n",
     "    return (img, label)\n",
+    "\n",
     "\n",
     "def resize_img(img, label):\n",
     "    img = tf.image.resize(img,small_shape[:2])\n",
-    "    return (img, label) \n",
+    "    return (img, label)\n",
+    "\n",
     "\n",
     "def randomize_img1(img, label):\n",
     "    img = tf.image.random_flip_left_right(img)\n",
@@ -70,10 +77,12 @@
     "    img = tf.image.random_hue(img, 0.2)\n",
     "    return (img, label)\n",
     "\n",
+    "\n",
     "def randomize_img2(img, label):\n",
     "    img = tf.image.random_flip_left_right(img)\n",
     "    img = tf.image.random_saturation(img, 0.4,0.9)\n",
     "    return (img, label)\n",
+    "\n",
     "\n",
     "def randomize_img3(img, label):\n",
     "    img = tf.image.random_flip_left_right(img)\n",
@@ -81,10 +90,13 @@
     "    img = tf.image.random_contrast(img,0.3,0.9)\n",
     "    return (img, label)\n",
     "\n",
+    "\n",
     "def randomize_saturation(img, label):\n",
     "    img = tf.image.random_saturation(img, 0.5,0.9)\n",
     "    img = tf.image.random_hue(img, 0.025)\n",
     "    return (img, label)\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "def randomize_brightness(img, label):\n",
@@ -92,27 +104,33 @@
     "    img = tf.image.random_contrast(img,0.3,0.9)\n",
     "    return (img, label)\n",
     "\n",
+    "\n",
     "def random_flip_img(img, label):\n",
     "    img = tf.image.random_flip_left_right(img)\n",
     "    return (img, label)\n",
     "\n",
+    "\n",
     "def rotate_img(img, label):\n",
     "    img = tfa.image.rotate(img, angles=0.5)\n",
     "    return (img, label)\n",
+    "\n",
     "\n",
     "def random_crop(img, label):\n",
     "    img = tf.image.resize(img,big_shape[:2])\n",
     "    img = tf.image.random_crop(img, (128,128,3))\n",
     "    return (img, label)\n",
     "\n",
+    "\n",
     "def random_move_img(img, label):\n",
     "    img = tfa.image.rotate(img, angles=random.uniform(-0.5, 0.5))\n",
     "    img = tfa.image.translate(img, [np.random.random()*30-15,np.random.random()*30-15])\n",
     "    return (img, label)\n",
     "\n",
+    "\n",
     "def random_test(img, label):\n",
-    "    \n",
+    "   \n",
     "    return (img, label)\n",
+    "\n",
     "\n",
     "def random_cutout(img, label):\n",
     "    cutout_size = random.randint(16,48)\n",
@@ -125,16 +143,20 @@
     "        img = img[0,]\n",
     "    return img, label\n",
     "\n",
+    "\n",
     "def random_image_warp(img, label):\n",
     "    n_warp_points = 25\n",
     "    offset = 5\n",
-    "    \n",
+    "   \n",
     "    offsets = tf.random.uniform(shape = [n_warp_points, 2], minval = -offset, maxval = offset)\n",
     "    src_points = tf.random.uniform(shape = [n_warp_points, 2], maxval = shape[0])\n",
     "    dest_points = src_points + offsets\n",
     "    img, flow = tfa.image.sparse_image_warp([img], [src_points], [dest_points])\n",
     "    img = img[0,]\n",
     "    return img, label\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -156,7 +178,10 @@
     "        # elif random_value == 6:\n",
     "        #     img, label = random_crop(img, label)\n",
     "\n",
+    "\n",
     "    return (img, label)\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "AUTOTUNE = tf.data.experimental.AUTOTUNE\n",
@@ -165,8 +190,12 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "#Random Brightness\n",
     "ds_brightness_train = ds_train.map(randomize_brightness)\n",
+    "\n",
     "\n",
     "#Random Brightness and crop\n",
     "ds_brightness_crop_train = ds_train.map(randomize_brightness)\n",
@@ -174,26 +203,33 @@
     "#Random Saturation\n",
     "ds_saturation_train = ds_train.map(randomize_saturation)\n",
     "\n",
+    "\n",
     "#Random Saturation and crop\n",
     "ds_saturation_crop_train = ds_train.map(randomize_saturation)\n",
     "ds_saturation_crop_train = ds_saturation_crop_train.map(random_crop)\n",
     "\n",
+    "\n",
     "#Random Crop\n",
     "ds_crop_train = ds_train.map(random_crop)\n",
+    "\n",
     "\n",
     "#Random Move\n",
     "ds_move_train = ds_train.map(random_move_img)\n",
     "\n",
+    "\n",
     "#Random cutout\n",
     "ds_cutout_train = ds_train.map(random_cutout)\n",
     "\n",
+    "\n",
     "#Random Warp\n",
     "ds_warp_train = ds_train.map(random_image_warp)\n",
+    "\n",
     "\n",
     "#Random lots\n",
     "ds_random_train = ds_train.map(randomize_brightness)\n",
     "ds_random_train = ds_random_train.map(random_image_warp)\n",
     "ds_random_train = ds_random_train.map(random_move_img)\n",
+    "\n",
     "\n",
     "#Random lotsV2\n",
     "ds_random2_train = ds_train.map(randomize_saturation)\n",
@@ -201,12 +237,35 @@
     "ds_random2_train = ds_random2_train.map(random_cutout)\n",
     "ds_random2_train = ds_random2_train.map(random_move_img)\n",
     "\n",
+    "\n",
     "#Random lots v3\n",
     "ds_random3_train = ds_train.map(randomize_saturation)\n",
     "ds_random3_train = ds_random3_train.map(random_image_warp)\n",
     "ds_random3_train = ds_random3_train.map(random_cutout)\n",
     "ds_random3_train = ds_random3_train.map(random_move_img)\n",
     "ds_random3_train = ds_random3_train.map(randomize_saturation)\n",
+    "\n",
+    "\n",
+    "#Random Lots v4\n",
+    "ds_random4_train = ds_train.map(randomize_brightness)\n",
+    "ds_random4_train = ds_random4_train.map(random_crop)\n",
+    "ds_random4_train = ds_random4_train.map(random_move_img)\n",
+    "\n",
+    "\n",
+    "#Random Lots v5\n",
+    "ds_random5_train = ds_train.map(randomize_brightness)\n",
+    "ds_random5_train = ds_random5_train.map(random_crop)\n",
+    "ds_random5_train = ds_random5_train.map(random_move_img)\n",
+    "ds_random5_train = ds_random5_train.map(random_cutout)\n",
+    "\n",
+    "\n",
+    "#Random lots v6\n",
+    "ds_random6_train = ds_train.map(randomize_saturation)\n",
+    "ds_random6_train = ds_random6_train.map(random_move_img)\n",
+    "ds_random6_train = ds_random6_train.map(randomize_saturation)\n",
+    "ds_random6_train = ds_random6_train.map(random_image_warp)\n",
+    "ds_random6_train = ds_random6_train.map(random_crop)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -220,10 +279,16 @@
     "ds_train = ds_train.concatenate(ds_random_train)\n",
     "ds_train = ds_train.concatenate(ds_random2_train)\n",
     "ds_train = ds_train.concatenate(ds_random3_train)\n",
+    "ds_train = ds_train.concatenate(ds_random4_train)\n",
+    "ds_train = ds_train.concatenate(ds_random5_train)\n",
+    "ds_train = ds_train.concatenate(ds_random6_train)\n",
+    "\n",
     "\n",
     "ds_flip_train = ds_train.map(random_flip_img)\n",
     "ds_train = ds_train.concatenate(ds_flip_train)\n",
+    "ds_train = ds_train.concatenate(ds_train)\n",
     "ds_train = ds_train.map(resize_img)\n",
+    "\n",
     "\n",
     "tfds.visualization.show_examples(ds_train, ds_info)\n",
     "ds_train = ds_train.cache()\n",
@@ -231,29 +296,32 @@
     "ds_train = ds_train.batch(BATCH_SIZE)\n",
     "ds_train = ds_train.prefetch(AUTOTUNE)\n",
     "\n",
+    "\n",
     "ds_test = ds_test.map(normalize_img, num_parallel_calls=AUTOTUNE)\n",
     "ds_test =ds_test.map(resize_img)\n",
     "ds_test = ds_test.batch(BATCH_SIZE)\n",
-    "ds_test = ds_test.prefetch(AUTOTUNE) \n",
+    "ds_test = ds_test.prefetch(AUTOTUNE)\n",
+    "\n",
     "\n",
     "ds_val = ds_val.map(normalize_img, num_parallel_calls=AUTOTUNE)\n",
     "ds_val =ds_val.map(resize_img)\n",
     "ds_val = ds_val.cache()\n",
     "ds_val = ds_val.shuffle(1000)\n",
     "ds_val = ds_val.batch(BATCH_SIZE)\n",
-    "ds_val = ds_val.prefetch(AUTOTUNE) "
+    "ds_val = ds_val.prefetch(AUTOTUNE)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22528\n"
+      "57216\n"
      ]
     }
    ],
@@ -270,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,36 +400,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d (Conv2D)             (None, 64, 64, 32)        896       \n",
+      " conv2d_2 (Conv2D)           (None, 64, 64, 32)        896       \n",
       "                                                                 \n",
-      " max_pooling2d (MaxPooling2D  (None, 32, 32, 32)       0         \n",
-      " )                                                               \n",
-      "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 32, 32, 64)        18496     \n",
-      "                                                                 \n",
-      " max_pooling2d_1 (MaxPooling  (None, 16, 16, 64)       0         \n",
+      " max_pooling2d_2 (MaxPooling  (None, 32, 32, 32)       0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " dropout (Dropout)           (None, 16, 16, 64)        0         \n",
+      " conv2d_3 (Conv2D)           (None, 32, 32, 64)        18496     \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 16384)             0         \n",
+      " max_pooling2d_3 (MaxPooling  (None, 16, 16, 64)       0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 128)               2097280   \n",
+      " dropout_2 (Dropout)         (None, 16, 16, 64)        0         \n",
       "                                                                 \n",
-      " dropout_1 (Dropout)         (None, 128)               0         \n",
+      " flatten_1 (Flatten)         (None, 16384)             0         \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 102)               13158     \n",
+      " dense_2 (Dense)             (None, 128)               2097280   \n",
+      "                                                                 \n",
+      " dropout_3 (Dropout)         (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 102)               13158     \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 2,129,830\n",
@@ -377,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -402,14 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n"
+      "Epoch 1/30\n"
      ]
     },
     {
@@ -424,9 +492,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "176/176 [==============================] - 292s 2s/step - loss: 4.3065 - accuracy: 0.0372 - val_loss: 3.6623 - val_accuracy: 0.1176\n",
-      "Epoch 2/10\n",
-      " 35/176 [====>.........................] - ETA: 3:16 - loss: 3.8275 - accuracy: 0.0848"
+      " 47/447 [==>...........................] - ETA: 14:15 - loss: 4.6113 - accuracy: 0.0173"
      ]
     },
     {
@@ -436,7 +502,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15300\\1408971685.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mds_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     validation_data=ds_val)\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15300\\3844004680.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mds_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m30\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     validation_data=ds_val)\n\u001b[0m",
       "\u001b[1;32mc:\\Users\\tomfe\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\keras\\utils\\traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     63\u001b[0m         \u001b[0mfiltered_tb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m             \u001b[0mfiltered_tb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mc:\\Users\\tomfe\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_batch_size, validation_freq, max_queue_size, workers, use_multiprocessing)\u001b[0m\n\u001b[0;32m   1648\u001b[0m                         ):\n\u001b[0;32m   1649\u001b[0m                             \u001b[0mcallbacks\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mon_train_batch_begin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1650\u001b[1;33m                             \u001b[0mtmp_logs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1651\u001b[0m                             \u001b[1;32mif\u001b[0m \u001b[0mdata_handler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshould_sync\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1652\u001b[0m                                 \u001b[0mcontext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masync_wait\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mc:\\Users\\tomfe\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\tensorflow\\python\\util\\traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    148\u001b[0m     \u001b[0mfiltered_tb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    149\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 150\u001b[1;33m       \u001b[1;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    151\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    152\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
@@ -456,13 +522,13 @@
     "#Train the model \n",
     "history = model.fit(\n",
     "    ds_train,\n",
-    "    epochs=10,\n",
+    "    epochs=30,\n",
     "    validation_data=ds_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
